tests/asm-link/fixed-point-precision/rgbasm.err
error: invalid fixed-point precision
    ╭─[ test.asm:22:12 ]
    │
 22 │ def qerr = 1.25q32
    │            ───┬───  
    │               ╰───── this must be between 1 and 31 inclusive, not 32
────╯
error: fixed-point precision cannot be 0
    ╭─[ test.asm:23:12 ]
    │
 23 │     println "{q0f:qerr}"
    │               ─┬─  
    │                ╰─── error parsing this format specification
────╯
2 errors generated.
